Clear m_deviceCache before introspecting again

Otherwise m_deviceCache grows every time allDevices is called.

BUG: 416495
Signed-off-by: Eike Hein <eike.hein@mbition.io>